@@ -1,3 +1,9 @@
+2004-09-19  Jari Petter Sundell  <jaris@student.matnat.uio.no>
+
+	* all: Forgotten to update this file for a while. Lot's of stuff happen with the code. ;)
+
+	* client: Added resume of torrents and snubbing.
+
 2004-08-23  Jari Petter Sundell  <jaris@student.matnat.uio.no>
 
 	* torrent/data: Wrote new and cleaner files to chunk abstraction. Much prettier.
